[gd_scene load_steps=8 format=2]

[ext_resource path="res://button_theme.tres" type="Theme" id=1]
[ext_resource path="res://boss/boss.gd" type="Script" id=2]
[ext_resource path="res://enemy/art/bar.png" type="Texture" id=3]
[ext_resource path="res://enemy/art/bar_over.png" type="Texture" id=4]
[ext_resource path="res://enemy/art/bar_under.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.40788, 8.18368 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6.5, -35 ), Vector2( -6.5, -37 ), Vector2( -6.5, -35 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6.5, 0 ), Vector2( -6.5, -2 ), Vector2( -6.5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightArm:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightArm:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeftArm:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeftArm:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RightLeg:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11.8132, 30.9294 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RightLeg:rect_rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LeftLeg:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.799171, 30.9294 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LeftLeg:rect_rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="boss" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 93.5093, 165.368 )
collision_layer = 2
collision_mask = 20
script = ExtResource( 2 )

[node name="RightArm" type="Label" parent="." groups=[
"body_label",
]]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = -15.0
margin_top = 2.0
margin_right = -2.9997
margin_bottom = 27.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
theme = ExtResource( 1 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArm" type="Label" parent="RightArm" groups=[
"body_label",
]]
margin_left = -1.5
margin_top = -8.0
margin_right = 10.5003
margin_bottom = 17.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArm2" type="Label" parent="RightArm/RightArm" groups=[
"body_label",
]]
margin_left = 3.0
margin_right = 15.0003
margin_bottom = 25.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArm3" type="Label" parent="RightArm" groups=[
"body_label",
]]
margin_left = -1.5
margin_top = 8.0
margin_right = 10.5003
margin_bottom = 33.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArm4" type="Label" parent="RightArm/RightArm3" groups=[
"body_label",
]]
margin_left = 3.0
margin_right = 15.0003
margin_bottom = 25.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArm5" type="Label" parent="RightArm" groups=[
"body_label",
]]
margin_top = 20.0
margin_right = 12.0003
margin_bottom = 45.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArm6" type="Label" parent="RightArm/RightArm5" groups=[
"body_label",
]]
margin_right = 12.0003
margin_bottom = 25.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLeg" type="Label" parent="." groups=[
"body_label",
]]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = -11.8132
margin_top = 30.9294
margin_right = 1.1868
margin_bottom = 55.9294
rect_pivot_offset = Vector2( 6.5, 12.5 )
theme = ExtResource( 1 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLeg" type="Label" parent="RightLeg" groups=[
"body_label",
]]
margin_left = -2.72394
margin_top = -4.18324
margin_right = 10.2761
margin_bottom = 20.8168
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLeg2" type="Label" parent="RightLeg" groups=[
"body_label",
]]
margin_left = 0.0751572
margin_top = -4.63007
margin_right = 13.0752
margin_bottom = 20.3699
rect_rotation = -178.922
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLeg3" type="Label" parent="RightLeg" groups=[
"body_label",
]]
margin_left = -6.38438
margin_top = 8.0759
margin_right = 6.61562
margin_bottom = 33.0759
rect_rotation = -90.5701
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLeg4" type="Label" parent="RightLeg" groups=[
"body_label",
]]
margin_left = -1.03581
margin_top = 8.73538
margin_right = 11.9642
margin_bottom = 33.7354
rect_rotation = -89.4542
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torso" type="Label" parent="." groups=[
"body_label",
]]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = -6.5
margin_right = 6.5
margin_bottom = 25.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
theme = ExtResource( 1 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torso3" type="Label" parent="Torso" groups=[
"body_label",
]]
margin_left = -5.0
margin_top = -9.0
margin_right = 8.0
margin_bottom = 16.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torso2" type="Label" parent="Torso/Torso3" groups=[
"body_label",
]]
margin_left = -10.0
margin_right = 3.0
margin_bottom = 25.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torso4" type="Label" parent="Torso" groups=[
"body_label",
]]
margin_left = -5.0
margin_top = 11.0
margin_right = 8.0
margin_bottom = 36.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torso" type="Label" parent="Torso/Torso4" groups=[
"body_label",
]]
margin_left = -10.0
margin_right = 3.0
margin_bottom = 25.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftLeg" type="Label" parent="." groups=[
"body_label",
]]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_left = -0.799171
margin_top = 30.9294
margin_right = 12.2008
margin_bottom = 55.9294
rect_pivot_offset = Vector2( 6.5, 12.5 )
theme = ExtResource( 1 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftLeg" type="Label" parent="LeftLeg" groups=[
"body_label",
]]
margin_left = -2.72394
margin_top = -4.18324
margin_right = 10.2761
margin_bottom = 20.8168
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftLeg2" type="Label" parent="LeftLeg" groups=[
"body_label",
]]
margin_left = 0.0751572
margin_top = -4.63007
margin_right = 13.0752
margin_bottom = 20.3699
rect_rotation = -178.922
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftLeg3" type="Label" parent="LeftLeg" groups=[
"body_label",
]]
margin_left = -6.38438
margin_top = 8.0759
margin_right = 6.61562
margin_bottom = 33.0759
rect_rotation = -90.5701
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftLeg4" type="Label" parent="LeftLeg" groups=[
"body_label",
]]
margin_left = -1.03581
margin_top = 8.73538
margin_right = 11.9642
margin_bottom = 33.7354
rect_rotation = -89.4542
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArm" type="Label" parent="." groups=[
"body_label",
]]
margin_left = 5.0
margin_top = 2.0
margin_right = 17.0003
margin_bottom = 27.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
theme = ExtResource( 1 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArm" type="Label" parent="LeftArm" groups=[
"body_label",
]]
margin_left = -1.5
margin_top = -8.0
margin_right = 10.5003
margin_bottom = 17.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArm2" type="Label" parent="LeftArm/LeftArm" groups=[
"body_label",
]]
margin_left = 3.0
margin_right = 15.0003
margin_bottom = 25.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArm3" type="Label" parent="LeftArm" groups=[
"body_label",
]]
margin_left = -1.5
margin_top = 8.0
margin_right = 10.5003
margin_bottom = 33.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArm4" type="Label" parent="LeftArm/LeftArm3" groups=[
"body_label",
]]
margin_left = 3.0
margin_right = 15.0003
margin_bottom = 25.0
rect_rotation = 177.935
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArm5" type="Label" parent="LeftArm" groups=[
"body_label",
]]
margin_top = 20.0
margin_right = 12.0003
margin_bottom = 45.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArm6" type="Label" parent="LeftArm/LeftArm5" groups=[
"body_label",
]]
margin_right = 12.0003
margin_bottom = 25.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Label" parent="." groups=[
"body_label",
]]
modulate = Color( 6.36, 1.16, 1, 1 )
margin_left = -6.5
margin_top = -35.0
margin_right = 6.5
margin_bottom = -10.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
theme = ExtResource( 1 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Label" parent="Head" groups=[
"body_label",
]]
margin_top = 10.0
margin_right = 13.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head2" type="Label" parent="Head" groups=[
"body_label",
]]
margin_left = -6.5
margin_top = 6.25
margin_right = 6.5
margin_bottom = 31.25
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head3" type="Label" parent="Head" groups=[
"body_label",
]]
margin_left = 6.5
margin_top = 6.25
margin_right = 19.5
margin_bottom = 31.25
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head4" type="Label" parent="Head" groups=[
"body_label",
]]
margin_left = -6.5
margin_top = -3.0
margin_right = 7.5
margin_bottom = 22.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head5" type="Label" parent="Head" groups=[
"body_label",
]]
margin_top = -3.0
margin_right = 14.0
margin_bottom = 22.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head6" type="Label" parent="Head" groups=[
"body_label",
]]
margin_left = 6.5
margin_top = -3.0
margin_right = 20.5
margin_bottom = 22.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 6.5, 12.5 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 5.98834, 3.94949 )
shape = SubResource( 1 )

[node name="state" type="Label" parent="."]
margin_left = -0.648865
margin_top = -48.577
margin_right = -0.648865
margin_bottom = -34.577
grow_horizontal = 2
grow_vertical = 2
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -15.0
margin_top = -30.0
margin_right = 25.0
margin_bottom = 10.0
rect_scale = Vector2( 2, 1 )
max_value = 1.0
step = 0.01
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="movement" type="Tween" parent="."]

[node name="attack" type="Tween" parent="."]

[node name="death" type="Tween" parent="."]

[node name="move_rotation" type="Tween" parent="."]

[node name="attack_timer" type="Timer" parent="."]
one_shot = true

[node name="anim_player" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
[connection signal="tween_all_completed" from="movement" to="." method="_on_movement_tween_all_completed"]
[connection signal="tween_all_completed" from="attack" to="." method="_on_attack_tween_all_completed"]
[connection signal="tween_all_completed" from="death" to="." method="_on_death_tween_all_completed"]
[connection signal="tween_all_completed" from="move_rotation" to="." method="_on_move_rotation_tween_all_completed"]
